--- a/css/styles.css
+++ b/css/styles.css
@@ -49,15 +49,26 @@ ul {
 padding: 0;
 margin: 0;
 }
-
 .container {
-  /*outline: solid red;*/
-  max-width: 1200px;
+  max-width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+  max-width: 1200px;
+}
+}
+
 
 /* @media (min-width: 480px){ */
 .section {
@@ -288,24 +299,32 @@ margin-right: 93px;
 /* ================= MOBILE MENU ================= */
 .mobile-menu {
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
   width: 100%;
-  max-width: 480px;
-  height: 796px;
+  height: 100%;
+  padding: 40px;
+  padding-top: 48px;
   background-color: var(--main-background-color);
   transform: translateX(100%);
   transition: transform 1s;
-  padding-top: 48px;
-  padding-left: 40px;
+  z-index: 1;
 }
+
+.mobile-menu-content {
+  display: flex;
+  flex-direction: column;
+}
+
 .mobile-information-list {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  margin-bottom: 302px; 
+}
+
+.mobile-nav{
+  margin-bottom: auto;
 }
 
 .mobile-information-link {
@@ -353,6 +372,7 @@ margin-right: 93px;
 
 .mobile-socials-list {
  display: flex;
+ flex-wrap: wrap;
  gap: 20px;
 }
 
@@ -423,9 +443,8 @@ margin-right: 93px;
   background-color: var(--dark-background-color);
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/background.img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/background-mobile.img.jpg);
   background-repeat: no-repeat;
-  
   background-position: center;
   background-size: cover;
   margin-left: auto;
@@ -433,22 +452,48 @@ margin-right: 93px;
 }
 
 @media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
+(min-resolution: 190dpi),
 (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/background-mobile.img@2x.jpg);
+  }
+}
+
+@media (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+          url(../images/hero/background-tablet.img.jpg);
+  }
+}
+
+@media (min-device-pixel-ratio: 2) and (min-width: 768px),
+(min-resolution: 190dpi) and (min-width: 768px),
+(min-resolution: 2dppx) and (min-width: 768px) {
+.hero {
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/background-tablet.img@2x.jpg);
+}
+}
+
+@media (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/hero/background.img.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+  }
+}
+
+@media (min-device-pixel-ratio: 2) and (min-width: 1200px),
+(min-resolution: 192dpi) and (min-width: 1200px),
+(min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../images/hero/background.img@2x.jpg);
       }
     }
-
- @media (min-width: 1200px) {
-  .hero {
-    /* background-size: contain; */
-    padding-top: 200px;
-    padding-bottom: 200px;
-    max-width: 1600px;
-  }
- }
 
 /* @media (min-width: 480px) { */
   .tittle {
@@ -460,20 +505,23 @@ margin-right: 93px;
   text-transform: uppercase;
   color: var(--main-color-theme-dark);
 
-  width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
 }
 
+@media (min-width: 768px) {
+  .tittle {
+    width: 360px;}
+  }
 
 @media (min-width: 1200px) {
   .tittle {
     width: 643px;
     font-size: 44px;
     line-height: 1.36;
-
   }
+
 }
 .modal-btn {
   font-family:inherit;
@@ -641,6 +689,17 @@ gap: 30px;
     border-radius: 0px 0px 4px 4px;
   }
 
+    @media (min-width: 768px) {
+      .employees-item {
+        flex-basis: calc((100% - 30px) / 2);
+      }
+    }
+  
+    @media (min-width: 1200px) {
+      .employees-item {
+        flex-basis: calc((100% - 90px) / 4);
+      }
+    }
 
 /* @media (min-width: 480px){ */
 .our-employees {
@@ -781,9 +840,32 @@ flex-wrap: wrap;
 align-items: center;
 justify-content: center;
 gap: 30px;
+
 }
- 
-/* @media (min-width: 480px){ */
+
+  .customers-item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+
+@media (min-width: 768px){
+  .customers-item {
+ flex-basis: calc((100% - 60px) / 3);
+}
+}
+
+@media (min-width: 1200px) {
+  .customers-item {
+    flex-basis: calc((100% - 150px) / 6);
+  }
+}
+
+ @media (min-width: 1200px){
+.customers-list {
+    gap: 30px;
+  }
+ }
+
 .customers-link {
     fill: #AFB1B8;
     border: 1px solid #AFB1B8;
@@ -791,7 +873,7 @@ gap: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 210px;
+    width: 100%;
     height: 92px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -801,6 +883,7 @@ gap: 30px;
     width: 226px;
   }
 }
+
 @media (min-width: 1200px) {
   .customers-link {
     width: 170px;
@@ -820,14 +903,15 @@ gap: 30px;
 .footer{
   background-color: var(--dark-background-color);
   padding-top: 60px;
-  
+  padding-bottom: 60px;
+   
 }
 
 .footer-container {
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 
 } 
 
@@ -835,16 +919,22 @@ gap: 30px;
 .footer-container {
   flex-direction: row;
   align-items: baseline;
- 
   }
 }
-
 
 
 .address{
   margin-top: 20px;
   margin-bottom: 60px;
 }
+
+@media (min-width: 1200px) {
+  .address {
+    width: 231px;
+    margin-bottom: 0;
+  }
+}
+
 
 .contact-info-item {
   margin-bottom: 8px;
@@ -890,7 +980,6 @@ margin-bottom: 60px;
   }
 }
 
-
 .to-join {
   font-weight: 700;
   font-size: 14px;
@@ -899,7 +988,22 @@ margin-bottom: 60px;
   text-transform: uppercase;
   color: var(--main-color-theme-dark);
   margin-bottom: 20px;
+
 }
+
+
+@media (min-width: 768px) {
+  .to-join1 {
+    margin-top: 5px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .to-join1 {
+    margin-top: 12px;
+  }
+}
+
 
 .socials-link-dark-theme{
 background-color: rgba(255, 255, 255, 0.1);;
@@ -918,38 +1022,46 @@ background-color: rgba(255, 255, 255, 0.1);;
 @media (min-width: 768px) {
 .footer-information-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 165px;
     width: 100%;
-    padding-left: 76px;
-    padding-right: 89px;
   }
 }
 @media (min-width: 1200px) {
   .footer-information-box {
     display: flex;
+    gap: 0;
     padding-left: 0;
     padding-right: 0;
   }
 }
 
 
-.join-form-box {
+.join-form-box { 
   text-align: center;
+  width: 100%;
 }
 
 @media (min-width: 1200px) {
   .join-form-box {
-  text-align: left;
+   text-align: left;
+   justify-content: baseline;
+   align-items: baseline;
+   align-items: baseline ;
   }
 }
-
+.join-form {
+  width: 100%;
+}
 .join-form-label {
 display: none;
 }
 .join-form-field {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
+  width: 100%;
 }
 
 
@@ -966,7 +1078,8 @@ display: none;
 }
 .join-form-btn {
   display: flex;
-  margin-bottom: 60px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 @media (min-width: 1200px){
@@ -980,13 +1093,21 @@ display: none;
 .join-form-input {
   color: var(--address-color);
   outline: none;
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   background-color: transparent;
   border: 1px solid var(--form-join-border);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  
+}
+
+@media (min-width: 768px) {
+  .join-form-input {
+    width: 450px;
+    
+  }
 }
 
 @media (min-width: 1200px){
@@ -996,7 +1117,6 @@ display: none;
 }
 .join-form-input::placeholder {
   color: var(--address-color);}
-
 /* ================= FOOTER ================= */
 
 /* ================= PORTFOLIO ================= */
