--- a/css/styles.css
+++ b/css/styles.css
@@ -912,8 +912,15 @@ gap: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 } 
+/* 
+@media (min-width: 798px) { */
+  .footer-container {
+margin-left: auto;
+margin-right: auto;}
+
+/* }
+} */
 
 @media (min-width: 1200px) {
 .footer-container {
@@ -1015,21 +1022,23 @@ background-color: rgba(255, 255, 255, 0.1);;
 @media (min-width: 1200px){
 .footer-main {
   text-align: left;
-  margin-right: 94px;
+  margin-right: 70px;
   }
 }
+
 
 @media (min-width: 768px) {
 .footer-information-box {
     display: flex;
+    
     justify-content: center;
+    /* justify-content: center; */
     gap: 165px;
     width: 100%;
   }
 }
 @media (min-width: 1200px) {
   .footer-information-box {
-    display: flex;
     gap: 0;
     padding-left: 0;
     padding-right: 0;
